tests/baselines/reference/exportAssignNonIdentifier.errors.txt
tests/cases/conformance/externalModules/foo1.ts(2,1): error TS1148: Cannot compile external modules unless the '--module' flag is provided.
tests/cases/conformance/externalModules/foo1.ts(2,10): error TS1003: Identifier expected.
tests/cases/conformance/externalModules/foo2.ts(1,10): error TS1003: Identifier expected.
tests/cases/conformance/externalModules/foo3.ts(1,10): error TS1003: Identifier expected.
tests/cases/conformance/externalModules/foo4.ts(1,10): error TS1003: Identifier expected.
tests/cases/conformance/externalModules/foo6.ts(1,10): error TS1003: Identifier expected.
tests/cases/conformance/externalModules/foo6.ts(1,14): error TS1109: Expression expected.
tests/cases/conformance/externalModules/foo7.ts(1,15): error TS1005: ';' expected.
tests/cases/conformance/externalModules/foo8.ts(1,10): error TS1003: Identifier expected.


==== tests/cases/conformance/externalModules/foo1.ts (2 errors) ====
    var x = 10;
    export = typeof x; // Error
    ~~~~~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
             ~~~~~~
!!! error TS1003: Identifier expected.
    
==== tests/cases/conformance/externalModules/foo2.ts (1 errors) ====
    export = "sausages"; // Error
             ~~~~~~~~~~
!!! error TS1003: Identifier expected.
    
==== tests/cases/conformance/externalModules/foo3.ts (1 errors) ====
    export = class Foo3 {}; // Error
             ~~~~~
!!! error TS1003: Identifier expected.
    
==== tests/cases/conformance/externalModules/foo4.ts (1 errors) ====
    export = true; // Error
             ~~~~
!!! error TS1003: Identifier expected.
    
==== tests/cases/conformance/externalModules/foo5.ts (0 errors) ====
    export = undefined; // Valid.  undefined is an identifier in JavaScript/TypeScript
    
==== tests/cases/conformance/externalModules/foo6.ts (2 errors) ====
    export = void; // Error
             ~~~~
!!! error TS1003: Identifier expected.
                 ~
!!! error TS1109: Expression expected.
    
==== tests/cases/conformance/externalModules/foo7.ts (1 errors) ====
    export = Date || String; // Error
                  ~~
!!! error TS1005: ';' expected.
    
==== tests/cases/conformance/externalModules/foo8.ts (1 errors) ====
    export = null; // Error
             ~~~~
!!! error TS1003: Identifier expected.
    
    